--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
       loading="lazy"
       allowfullscreen
       referrerpolicy="no-referrer-when-downgrade"
-      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAskmkk_rH0YFxZoZP2bvsXTFlSP6Uc3IA
-    &q=Red+Tri+Digital,UK”">
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAskmkk_rH0YFxZoZP2bvsXTFlSP6Uc3IA&q=Red+Tri+Digital,UK”">
   </section>
 
 </body>
